{
  "version": 4,
  "terraform_version": "1.7.1",
  "serial": 57,
  "lineage": "5f86a070-e79e-3b25-7033-bef6afd0e5ec",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "DockerInstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-088b9d967a332c1ca",
            "arn": "arn:aws:ec2:us-east-2:977098994390:instance/i-08b8559629efb91ab",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08b8559629efb91ab",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "docker-lab-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-048c50c19c7ae774a",
            "private_dns": "ip-192-168-1-198.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.198",
            "public_dns": "ec2-3-12-136-72.us-east-2.compute.amazonaws.com",
            "public_ip": "3.12.136.72",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-060035f25bba9621b",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09981ba8dc7ab25ce",
            "tags": {
              "Name": "docker-lab-instance"
            },
            "tags_all": {
              "Name": "docker-lab-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06f3b276826e24784"
            ]
          },
          "dependencies": [
            "aws_key_pair.ec2_key",
            "aws_security_group.web_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.lab_vpc",
            "data.aws_ami.amazon_2",
            "tls_private_key.ec2_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:977098994390:internet-gateway/igw-03c08e3b01f992e23",
            "id": "igw-03c08e3b01f992e23",
            "owner_id": "977098994390",
            "region": "us-east-2",
            "tags": {
              "Name": "docker-lab-igw"
            },
            "tags_all": {
              "Name": "docker-lab-igw"
            },
            "vpc_id": "vpc-0f9a993b86eb94358"
          },
          "dependencies": [
            "aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:977098994390:route-table/rtb-0b83410a1bbf3a1da",
            "id": "rtb-0b83410a1bbf3a1da",
            "owner_id": "977098994390",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03c08e3b01f992e23",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "docker-lab-public-route-table"
            },
            "tags_all": {
              "Name": "docker-lab-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9a993b86eb94358"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007e74612dbc93f3b",
            "region": "us-east-2",
            "route_table_id": "rtb-0b83410a1bbf3a1da",
            "subnet_id": "subnet-09981ba8dc7ab25ce"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:977098994390:security-group/sg-06f3b276826e24784",
            "description": "Allow SSH and HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06f3b276826e24784",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow app traffic",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8100
              }
            ],
            "name": "docker-Web-SG",
            "name_prefix": "",
            "owner_id": "977098994390",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "docker-lab-SG"
            },
            "tags_all": {
              "Name": "docker-lab-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9a993b86eb94358"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:977098994390:subnet/subnet-09981ba8dc7ab25ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09981ba8dc7ab25ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "977098994390",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "docker-lab-public-subnet"
            },
            "tags_all": {
              "Name": "docker-lab-public-subnet"
            },
            "vpc_id": "vpc-0f9a993b86eb94358"
          },
          "dependencies": [
            "aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lab_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:977098994390:vpc/vpc-0f9a993b86eb94358",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0342a6d0b501fce49",
            "default_route_table_id": "rtb-0484e6b28889bb4cf",
            "default_security_group_id": "sg-06ab2efe78f3f112f",
            "dhcp_options_id": "dopt-08e01933fb7f73234",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f9a993b86eb94358",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0484e6b28889bb4cf",
            "owner_id": "977098994390",
            "region": "us-east-2",
            "tags": {
              "Name": "docker-lab-VPC"
            },
            "tags_all": {
              "Name": "docker-lab-VPC"
            }
          }
        }
      ]
    }
  ]
}